[tool.poetry]
name = "langchains"
version = "0.1.0"
description = ""
authors = ["kim"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.3"
gradio = "3.31.0"
pydantic = "1.10.7"
langchain = "0.0.172"
openai = "0.27.6"
python-dotenv = "1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
